# AutoGPT

./: README.md
.github/workflows/: deepreview.yml
deepreview/: README.md  pyproject.toml
deepreview/src/deepreview/: cli.py  config.py
deepreview/src/deepreview/core/: analyzer.py  audit.py  context.py  dataflow.py  git_ops.py  llm_client.py  protocols.py  quality.py  reporting.py  sarif.py  state.py  style.py  tracer.py
deepreview/src/deepreview/runner/: launcher.py
deepreview/tests/: test_cli_integration.py  test_cli_snapshot.py  test_llm_client_parsing.py  test_protocol_advisor.py
